# propag-monitoramento

./: .gitignore  app.py  applayout.py  data.toml  datapackage.yaml  dialect.yaml  pyproject.toml  teste_conexao.py
.github/: etl_failure.md
.github/workflows/: etl.yml
.streamlit/: config.toml  secrets.toml
data-raw/: propag_intervencoes_substituicao_acordo_fte80_2026.csv  propag_investimentos_intervencoes_plano_2026.csv  propag_investimentos_limite_2026.csv  propag_investimentos_monitoramento_2026.csv
datapackages/aux-classificadores/: datapackage.json
datapackages/aux-classificadores/data/: acao.csv  elemento_item.csv  fonte_recurso.csv  natureza_receita.csv  uo.csv
datapackages/aux-contratos/: datapackage.json
datapackages/siafi-2026/: datapackage.json
my_pkg/transform/: etl.py  execucao_view.py  metrics.py  rp_view.py  schema.py
processed_data/: tabela_intervencoes.csv  tabela_visao_geral.csv
schemas/: propag_intervencoes_2026.yaml  propag_investimentos_limite_2026.yaml  propag_investimentos_monitoramento_2026.yaml  propag_substituicao_fte80.yaml
security/: make_password_hash.py
streamlit/: config.toml  secrets.toml
